src/query/parser/cypher/generated/CypherParser.cpp

    #include "antlr4-runtime.h"


// Generated from CypherParser.g4 by ANTLR 4.13.1


#include "CypherParserVisitor.h"

#include "CypherParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct CypherParserStaticData final {
  CypherParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  CypherParserStaticData(const CypherParserStaticData&) = delete;
  CypherParserStaticData(CypherParserStaticData&&) = delete;
  CypherParserStaticData& operator=(const CypherParserStaticData&) = delete;
  CypherParserStaticData& operator=(CypherParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag cypherparserParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
CypherParserStaticData *cypherparserParserStaticData = nullptr;

void cypherparserParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (cypherparserParserStaticData != nullptr) {
    return;
  }
#else
  assert(cypherparserParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<CypherParserStaticData>(
    std::vector<std::string>{
      "cypher", "statement", "administrationStatement", "transactionStatement", 
      "showIndexesStatement", "dropIndexStatement", "createIndexStatement", 
      "createConstraintStatement", "constraintNodePattern", "constraintEdgePattern", 
      "constraintBody", "constraintTypeName", "dropConstraintStatement", 
      "showConstraintsStatement", "query", "regularQuery", "singleQuery", 
      "readingClause", "updatingClause", "withClause", "matchStatement", 
      "unwindStatement", "inQueryCallStatement", "createStatement", "mergeStatement", 
      "setStatement", "setItem", "deleteStatement", "removeStatement", "removeItem", 
      "foreachStatement", "callSubquery", "inTransactionsClause", "loadCsvStatement", 
      "returnStatement", "standaloneCallStatement", "yieldItems", "yieldItem", 
      "projectionBody", "projectionItems", "projectionItem", "orderStatement", 
      "skipStatement", "limitStatement", "sortItem", "where", "pattern", 
      "patternPart", "patternElement", "patternElementChain", "nodePattern", 
      "relationshipPattern", "relationshipDetail", "properties", "nodeLabels", 
      "nodeLabel", "relationshipTypes", "rangeLiteral", "expression", "orExpression", 
      "xorExpression", "andExpression", "notExpression", "comparisonExpression", 
      "arithmeticExpression", "powerExpression", "unaryExpression", "accessor", 
      "atom", "quantifierExpression", "existsExpression", "caseExpression", 
      "propertyExpression", "functionInvocation", "explicitProcedureInvocation", 
      "implicitProcedureInvocation", "variable", "labelName", "relTypeName", 
      "propertyKeyName", "procedureName", "procedureResultField", "functionName", 
      "namespace", "schemaName", "symbolicName", "literal", "booleanLiteral", 
      "numberLiteral", "integerLiteral", "mapLiteral", "listLiteral", "parameter", 
      "listComprehension", "reduceExpression", "patternComprehension"
    },
    std::vector<std::string>{
      "", "'CALL'", "'YIELD'", "'CREATE'", "'DELETE'", "'DETACH'", "'EXISTS'", 
      "'LIMIT'", "'MATCH'", "'MERGE'", "'OPTIONAL'", "'ORDER'", "'BY'", 
      "'SKIP'", "'ASCENDING'", "'ASC'", "'DESCENDING'", "'DESC'", "'REMOVE'", 
      "'RETURN'", "'SET'", "'WHERE'", "'WITH'", "'UNION'", "'UNWIND'", "'AND'", 
      "'AS'", "'CONTAINS'", "'DISTINCT'", "'ENDS'", "'IN'", "'IS'", "'NOT'", 
      "'OR'", "'STARTS'", "'XOR'", "'BETWEEN'", "'FALSE'", "'TRUE'", "'NULL'", 
      "'CASE'", "'WHEN'", "'THEN'", "'ELSE'", "'END'", "'COUNT'", "'FILTER'", 
      "'EXTRACT'", "'ANY'", "'NONE'", "'SINGLE'", "'ALL'", "'REDUCE'", "", 
      "'ON'", "'SHOW'", "'DROP'", "'IF'", "'FOR'", "'CONSTRAINT'", "'DO'", 
      "'REQUIRE'", "'UNIQUE'", "'MANDATORY'", "'SCALAR'", "'OF'", "'ADD'", 
      "'BEGIN'", "'COMMIT'", "'ROLLBACK'", "'TRANSACTION'", "'KEY'", "'NODE'", 
      "'BOOLEAN'", "'INTEGER'", "'FLOAT'", "'STRING'", "'LIST'", "'MAP'", 
      "'VECTOR'", "'OPTIONS'", "'FOREACH'", "'LOAD'", "'CSV'", "'HEADERS'", 
      "'FROM'", "'FIELDTERMINATOR'", "'TRANSACTIONS'", "'ROWS'", "'EXPLAIN'", 
      "'PROFILE'", "'='", "'<>'", "'<'", "'>'", "'<='", "'>='", "'+'", "'-'", 
      "'*'", "'/'", "'%'", "'^'", "'('", "')'", "'{'", "'}'", "'['", "']'", 
      "','", "'.'", "':'", "'|'", "'$'", "'..'", "';'"
    },
    std::vector<std::string>{
      "", "K_CALL", "K_YIELD", "K_CREATE", "K_DELETE", "K_DETACH", "K_EXISTS", 
      "K_LIMIT", "K_MATCH", "K_MERGE", "K_OPTIONAL", "K_ORDER", "K_BY", 
      "K_SKIP", "K_ASCENDING", "K_ASC", "K_DESCENDING", "K_DESC", "K_REMOVE", 
      "K_RETURN", "K_SET", "K_WHERE", "K_WITH", "K_UNION", "K_UNWIND", "K_AND", 
      "K_AS", "K_CONTAINS", "K_DISTINCT", "K_ENDS", "K_IN", "K_IS", "K_NOT", 
      "K_OR", "K_STARTS", "K_XOR", "K_BETWEEN", "K_FALSE", "K_TRUE", "K_NULL", 
      "K_CASE", "K_WHEN", "K_THEN", "K_ELSE", "K_END", "K_COUNT", "K_FILTER", 
      "K_EXTRACT", "K_ANY", "K_NONE", "K_SINGLE", "K_ALL", "K_REDUCE", "K_INDEX", 
      "K_ON", "K_SHOW", "K_DROP", "K_IF", "K_FOR", "K_CONSTRAINT", "K_DO", 
      "K_REQUIRE", "K_UNIQUE", "K_MANDATORY", "K_SCALAR", "K_OF", "K_ADD", 
      "K_BEGIN", "K_COMMIT", "K_ROLLBACK", "K_TRANSACTION", "K_KEY", "K_NODE", 
      "K_BOOLEAN", "K_INTEGER", "K_FLOAT", "K_STRING", "K_LIST", "K_MAP", 
      "K_VECTOR", "K_OPTIONS", "K_FOREACH", "K_LOAD", "K_CSV", "K_HEADERS", 
      "K_FROM", "K_FIELDTERMINATOR", "K_TRANSACTIONS", "K_ROWS", "K_EXPLAIN", 
      "K_PROFILE", "EQ", "NEQ", "LT", "GT", "LTE", "GTE", "PLUS", "MINUS", 
      "MULTIPLY", "DIVIDE", "MODULO", "POWER", "LPAREN", "RPAREN", "LBRACE", 
      "RBRACE", "LBRACK", "RBRACK", "COMMA", "DOT", "COLON", "PIPE", "DOLLAR", 
      "RANGE", "SEMI", "HexInteger", "OctalInteger", "DecimalInteger", "DoubleLiteral", 
      "ID", "StringLiteral", "WS", "COMMENT", "LINE_COMMENT"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  cypherparserParserStaticData = staticData.release();
}

}

CypherParser::CypherParser(TokenStream *input) : CypherParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

CypherParser::CypherParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  CypherParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *cypherparserParserStaticData->atn, cypherparserParserStaticData->decisionToDFA, cypherparserParserStaticData->sharedContextCache, options);
}

CypherParser::~CypherParser() {
  delete _interpreter;
}

const atn::ATN& CypherParser::getATN() const {
  return *cypherparserParserStaticData->atn;
}

std::string CypherParser::getGrammarFileName() const {
  return "CypherParser.g4";
}

const std::vector<std::string>& CypherParser::getRuleNames() const {
  return cypherparserParserStaticData->ruleNames;
}

const dfa::Vocabulary& CypherParser::getVocabulary() const {
  return cypherparserParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView CypherParser::getSerializedATN() const {
  return cypherparserParserStaticData->serializedATN;
}


//----------------- CypherContext ------------------------------------------------------------------

CypherParser::CypherContext::CypherContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

CypherParser::StatementContext* CypherParser::CypherContext::statement() {
  return getRuleContext<CypherParser::StatementContext>(0);
}

tree::TerminalNode* CypherParser::CypherContext::EOF() {
  return getToken(CypherParser::EOF, 0);
}

tree::TerminalNode* CypherParser::CypherContext::SEMI() {
  return getToken(CypherParser::SEMI, 0);
}


size_t CypherParser::CypherContext::getRuleIndex() const {
  return CypherParser::RuleCypher;
}


std::any CypherParser::CypherContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CypherParserVisitor*>(visitor))
    return parserVisitor->visitCypher(this);
  else
    return visitor->visitChildren(this);
}

CypherParser::CypherContext* CypherParser::cypher() {
  CypherContext *_localctx = _tracker.createInstance<CypherContext>(_ctx, getState());
  enterRule(_localctx, 0, CypherParser::RuleCypher);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(192);
    statement();
    setState(194);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == CypherParser::SEMI) {
      setState(193);
      match(CypherParser::SEMI);
    }
    setState(196);
    match(CypherParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatementContext ------------------------------------------------------------------

CypherParser::StatementContext::StatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t CypherParser::StatementContext::getRuleIndex() const {
  return CypherParser::RuleStatement;
}

void CypherParser::StatementContext::copyFrom(StatementContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- ProfileStatementContext ------------------------------------------------------------------

tree::TerminalNode* CypherParser::ProfileStatementContext::K_PROFILE() {
  return getToken(CypherParser::K_PROFILE, 0);
}

CypherParser::QueryContext* CypherParser::ProfileStatementContext::query() {
  return getRuleContext<CypherParser::QueryContext>(0);
}

CypherParser::AdministrationStatementContext* CypherParser::ProfileStatementContext::administrationStatement() {
  return getRuleContext<CypherParser::AdministrationStatementContext>(0);
}

CypherParser::ProfileStatementContext::ProfileStatementContext(StatementContext *ctx) { copyFrom(ctx); }


std::any CypherParser::ProfileStatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CypherParserVisitor*>(visitor))
    return parserVisitor->visitProfileStatement(this);
  else
    return visitor->visitChildren(this);
}
//----------------- ExplainStatementContext ------------------------------------------------------------------

tree::TerminalNode* CypherParser::ExplainStatementContext::K_EXPLAIN() {
  return getToken(CypherParser::K_EXPLAIN, 0);
}

CypherParser::QueryContext* CypherParser::ExplainStatementContext::query() {
  return getRuleContext<CypherParser::QueryContext>(0);
}

CypherParser::AdministrationStatementContext* CypherParser::ExplainStatementContext::administrationStatement() {
  return getRuleContext<CypherParser::AdministrationStatementContext>(0);
}

CypherParser::ExplainStatementContext::ExplainStatementContext(StatementContext *ctx) { copyFrom(ctx); }


std::any CypherParser::ExplainStatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CypherParserVisitor*>(visitor))
    return parserVisitor->visitExplainStatement(this);
  else
    return visitor->visitChildren(this);
}
//----------------- AdminStatementContext ------------------------------------------------------------------

CypherParser::AdministrationStatementContext* CypherParser::AdminStatementContext::administrationStatement() {
  return getRuleContext<CypherParser::AdministrationStatementContext>(0);
}

CypherParser::AdminStatementContext::AdminStatementContext(StatementContext *ctx) { copyFrom(ctx); }


std::any CypherParser::AdminStatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CypherParserVisitor*>(visitor))
    return parserVisitor->visitAdminStatement(this);
  else
    return visitor->visitChildren(this);
}
//----------------- RegularStatementContext ------------------------------------------------------------------

CypherParser::QueryContext* CypherParser::RegularStatementContext::query() {
  return getRuleContext<CypherParser::QueryContext>(0);
}

CypherParser::RegularStatementContext::RegularStatementContext(StatementContext *ctx) { copyFrom(ctx); }


std::any CypherParser::RegularStatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CypherParserVisitor*>(visitor))
    return parserVisitor->visitRegularStatement(this);
  else
    return visitor->visitChildren(this);
}
CypherParser::StatementContext* CypherParser::statement() {
  StatementContext *_localctx = _tracker.createInstance<StatementContext>(_ctx, getState());
  enterRule(_localctx, 2, CypherParser::RuleStatement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(210);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 3, _ctx)) {
    case 1: {
      _localctx = _tracker.createInstance<CypherParser::ExplainStatementContext>(_localctx);
      enterOuterAlt(_localctx, 1);
      setState(198);
      match(CypherParser::K_EXPLAIN);
      setState(201);
      _errHandler->sync(this);
      switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx)) {
      case 1: {
        setState(199);
        query();
        break;
      }

      case 2: {
        setState(200);
        administrationStatement();
        break;
      }

      default:
        break;
      }
      break;
    }

    case 2: {
      _localctx = _tracker.createInstance<CypherParser::ProfileStatementContext>(_localctx);
      enterOuterAlt(_localctx, 2);
      setState(203);
      match(CypherParser::K_PROFILE);
      setState(206);
      _errHandler->sync(this);
      switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx)) {
      case 1: {
        setState(204);
        query();
        break;
      }

      case 2: {
        setState(205);
        administrationStatement();
        break;
      }

      default:
        break;
      }
      break;
    }

    case 3: {
      _localctx = _tracker.createInstance<CypherParser::RegularStatementContext>(_localctx);
      enterOuterAlt(_localctx, 3);
      setState(208);
      query();
      break;
    }

    case 4: {
      _localctx = _tracker.createInstance<CypherParser::AdminStatementContext>(_localctx);
      enterOuterAlt(_localctx, 4);
      setState(209);
      administrationStatement();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AdministrationStatementContext ------------------------------------------------------------------

CypherParser::AdministrationStatementContext::AdministrationStatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

CypherParser::ShowIndexesStatementContext* CypherParser::AdministrationStatementContext::showIndexesStatement() {
  return getRuleContext<CypherParser::ShowIndexesStatementContext>(0);
}

CypherParser::DropIndexStatementContext* CypherParser::AdministrationStatementContext::dropIndexStatement() {
  return getRuleContext<CypherParser::DropIndexStatementContext>(0);
}

CypherParser::CreateIndexStatementContext* CypherParser::AdministrationStatementContext::createIndexStatement() {
  return getRuleContext<CypherParser::CreateIndexStatementContext>(0);
}

CypherParser::CreateConstraintStatementContext* CypherParser::AdministrationStatementContext::createConstraintStatement() {
  return getRuleContext<CypherParser::CreateConstraintStatementContext>(0);
}

CypherParser::DropConstraintStatementContext* CypherParser::AdministrationStatementContext::dropConstraintStatement() {
  return getRuleContext<CypherParser::DropConstraintStatementContext>(0);
}

CypherParser::ShowConstraintsStatementContext* CypherParser::AdministrationStatementContext::showConstraintsStatement() {
  return getRuleContext<CypherParser::ShowConstraintsStatementContext>(0);
}
